<resources>
    <string name="app_name">common</string>

    <string name="str_videoplay">播放</string>
    <string name="str_hopeplay">我想看</string>
    <string name="str_ok">好的~</string>
    <string name="str_home">主页</string>
    <string name="str_videoplay_note">您好，重新为您搜索</string>
    <string name="str_filmsearch_note1">您想播放第几个影片？</string>
    <string name="str_happy_watch">打开了,愉快的观看吧！</string>
    <string name="str_happy_watchold">打开了,愉快的观看吧！\n播放过程中您可以说:\"暂停\"、\"快进两分钟\"&#8230;</string>
    <string name="str_input_note">Hi,</string>
    <string name="str_input_note_hint">按住语音键说话~</string>
    <string name="str_filmsearch_start">正在为你搜索影片&#8230;</string>
    <string name="str_filmsearch_note2">播放第几个？</string>
    <string name="str_filmsearch_note3">为你找到以下结果，你想播放第几个？</string>
    <string name="str_volume_note">好的~</string>
    <string name="str_volume_set">音量已调整为</string>
    <string name="str_back">返回~</string>
    <string name="str_backhome">好的,返回主页~</string>
    <string name="str_resolution">正在为您打开分辨率设置</string>
    <string name="str_exit">好的,退出~</string>
    <string name="str_closeapp">好的,关闭应用~</string>
    <string name="tips">提示</string>
    <string name="network_check">无法连接到网络,请检查网络并重试</string>
    <string name="network_button">网络检测</string>
    <string name="str_loading_msg">正在为您加载中&#8230;</string>
    <string name="str_empty"> </string>
    <string name="search_fail_tips">搜索失败,再试试！</string>
    <string name="search_result_video">影视</string>
    <string name="str_minutes">分钟</string>
    <string name="str_hour">小时</string>
    <string name="str_before">前</string>
    <string name="str_search_whepisode_choose">播放第几集？</string>
    <string name="try_again">再试一次吧</string>
    <string name="requestfail_tips">请求失败了，再试一次吧</string>
    <string name="str_nextpage">你可以说\"<font color="#0258bb">换一批</font>\"哟</string>
    <string name="str_searchfilm_numerr">超出范围了</string>
    <string name="str_searchfilm_noexist">对应视频不存在</string>
    <string name="str_searchfilm_firstpage">已经是第一页~</string>
    <string name="str_searchfilm_lastpage">已经是最后一批~</string>
    <string name="str_opening">正在为你打开~</string>
    <string name="str_opensomthing">正在为您打开</string>
    <string name="str_audiobox_hello">我在~</string>
    <string name="str_search_detail">打开详情&#8230;</string>
    <string name="str_stock_hushen">沪深</string>
    <string name="str_stock_usa">美股</string>
    <string name="str_stock_hk">港股</string>
    <string name="str_maxprice">最高</string>
    <string name="str_minprice">最低</string>
    <string name="str_error_nomatch">没有匹配的识别结果</string>
    <string name="str_reco_busy">慢点说呢~</string>
    <string name="str_error_other">识别出错了，出错码：</string>
    <string name="str_error_network_timeout">网络好像不太好哦</string>
    <string name="str_error_network">网络好像不太好哦</string>
    <string name="str_error_unknown">我没有听懂</string>
    <string name="str_error_audio">我没有听清</string>
    <string name="str_error_server">没听懂</string>
    <string name="str_error_client">客户端出错</string>
    <string name="str_error_speech_timeout">声音大一点</string>
    <string name="str_error_init">语音初始化失败了</string>
    <string name="str_again">,重说一次</string>
    <string name="str_again2">,再说一次吧</string>
    <string name="str_music_note">我还不会,我会努力提升自己~</string>
    <string name="str_unknown_note">我会努力提升自己~</string>
    <string name="str_default_time">00:00:00</string>
    <string name="str_bluetooth_connect">蓝牙连接成功</string>
    <string name="str_bluetooth_disconnect">蓝牙断开连接</string>
    <string name="str_bluetooth_pair">现已进入蓝牙配对和连接状态</string>
    <string name="str_bluetooth">蓝牙</string>
    <string name="str_tvlive_jump">努力跳转~</string>
    <string name="str_tvlive_switch">好的,换台~</string>
    <string name="str_tvlive_unfind">没有找到这个频道,您可以说：\"中央一台\"</string>
    <string name="str_tvlive_uninstall">您没有安装此类应用~</string>
    <string name="str_kalaok_uninstall">您没有安装全民K歌,推荐安装全民K歌~</string>
    <string name="str_qqmusic_uninstall">您没有安装QQ音乐,请安装QQ音乐~</string>
    <string name="str_music_unfound">没有找到您要的歌曲</string>
    <string name="str_tip_default">最火的电视剧 | 刘德华的电影 | 琅琊榜</string>
    <string name="str_kalaok_error">你安装的版本可能不对,请更换创维版天籁K歌~</string>
    <string name="str_qqmusic_error">你安装的版本可能不对,请更换QQ音乐版本~</string>
    <string name="str_music_play_error">播放出错,尝试给您换一首~</string>
    <string name="str_rank_search">努力搜索榜单~</string>
    <string name="str_music_search">努力搜索</string>
    <string name="str_audiolive_note">我是小派,您的小助手,我会努力提高自己~</string>
    <string name="str_music_pre">好的~</string>
    <string name="str_music_stop">好的~</string>
    <string name="str_music_play">好的~</string>
    <string name="str_music_introduce">播放推荐歌曲~</string>
    <string name="str_music_fastforward">努力快进~</string>
    <string name="str_music_backforward">努力快退~</string>
    <string name="str_music_save">好的~</string>
    <string name="str_music_unsave">好的~</string>
    <string name="str_music_single">好的,单曲循环播放~</string>
    <string name="str_music_sequence">好的,顺序播放~</string>
    <string name="str_music_random">好的,随机播放~</string>
    <string name="str_alarm_button">我知道了</string>
    <string name="str_alarm_later_button">稍后提示</string>
    <string name="str_alarm_note">时间到啦!</string>
    <string name="str_alarm_notsupport_repeat">你说的我还不会,你可以说:晚上十点提醒我睡觉~</string>
    <string name="str_alarm_error">时间设置不具体，也可能与已有闹钟时间冲突了~</string>
    <string name="str_alarm_example">我是你的小助手,你可以这么说:下午四点提醒我去约会~</string>
    <string name="str_news">为你播放新闻~</string>
    <string name="str_shutoff">好的，关机，有事随时呼唤我</string>
    <string name="str_shuton">好的，开机</string>
    <string name="str_resboot">好的，重启</string>
    <string name="str_volume_plus">音量已增加到</string>
    <string name="str_volume_minus">音量已减小到</string>
    <string name="str_open_introduce">打开简介</string>
    <string name="str_already_first">已经是第一首了</string>
    <string name="str_already_last">已经是最后一首了</string>
    <string name="str_not_exist">不存在这一首</string>
    <string name="str_tvlist_note">还可问：山东卫视明天的节目单  快乐大本营什么时候播</string>
    <string name="str_fmlist_note">还可问：我想听电台 我想听作文 我想听评书 戏曲广播</string>
    <string name="str_poem_note">还可问：好雨知时节是出自哪首诗 陆游的诗 静夜思的全文</string>
    <string name="str_baike_note">还可问：周星驰百科 清华大学百科</string>
    <string name="str_ticket_note">还可问：查下成都去深圳的火车票 查询明天深圳到北京的航班</string>
    <string name="str_sports_record_note">还可问：英超最近有什么比赛 骑士对开拓者的比分 英超比赛什么时候开始</string>
    <string name="str_sports_note">还可问：尤文图斯的排名 欧冠决赛开始了没 NBA最近有比赛</string>
    <string name="str_poem">诗歌欣赏</string>
    <string name="str_sport_schedule">赛事详情</string>
    <string name="str_try_again">试说下面的关键字或换个说法</string>
    <string name="str_recipe">透露你个小秘密吧，菜谱已经在紧锣密鼓的研发中啦,功能好像还蛮不错。</string>
    <string name="str_cando_note">你可以这么说来控制播放哦。如果还想让我做别的事，先“叮当叮当”叫醒我</string>
    <string name="str_cando">我是你的小助手，我能做很多事情，我可以搜影片、播音乐、听广播、看新闻、查足球赛事、查电视节目单、查机票、查火车票、查菜谱，我还会不断的学习新的本事哦</string>
    <string name="to_expand_hint">展开</string>
    <string name="to_shrink_hint">收起</string>
    <string name="try_note">试试换个说法</string>
    <string name="try_note2">换个说法吧</string>
    <string name="music_try_note">试试这么说：“我想听音乐”</string>
    <string name="fm_try_note">试试这么说：“我想听广播”</string>
    <string name="tv_try_note">试试这么说：“我想看中央一台”</string>
    <string name="try_play_note">试试说"播放</string>
    <string name="exit_note">先退下了，有事再叫我</string>
    <string name="playing_note">努力播放影片~</string>
    <string name="server_busy">服务器有点忙，错误码：</string>
    <string name="unknow_tip">“%1$s”?您说的我还没理解到。</string>
    <string name="guide_speed">“快进1分钟”</string>
    <string name="guide_speedto">“快进30秒”</string>
    <string name="guide_next">“下一集”</string>
    <string name="guide_previous">“上一集”</string>
    <string name="guide_playnum">“播放第1集”</string>
    <string name="guide_volume_up">“音量增大”</string>
    <string name="guide_volume_down">“声音减小到5”</string>
    <string name="guide_pause">“暂停”</string>
    <string name="guide_volume_to">“声音调到12”</string>
    <string name="guide_exit">“退出”</string>
    <string name="guide_nextsong">“下一首”</string>
    <string name="guide_presong">“上一首”</string>
    <string name="guide_songloop">“单曲循环播放”</string>
    <string name="guide_random">“随机播放”</string>
    <string name="guide_sequence">“顺序播放”</string>
    <string name="guide_playsong">“陈奕迅的歌”</string>
    <string name="guide_nextnum">“播放下一个”</string>
    <string name="guide_prenum">“播放上一个”</string>
    <string name="guide_play">“播放”</string>
    <string name="guide_collect">“收藏”</string>
    <string name="guide_nextchannel">“下一个台”</string>
    <string name="guide_prechannel">“上一个频道”</string>
    <string name="guide_help">“怎么使用”</string>
    <string name="guide_fullscreen">“全屏播放”</string>
    <string name="guide_tvplay1">“中央一台”</string>
    <string name="guide_tvplay2">“江苏卫视电视节目单”</string>
    <string name="guide_note">我在的时候\n你可以继续这么说\n来控制播放：</string>
    <string name="str_seenexttime">我先退下了，有事您再叫我</string>
    <string name="str_alarmring">你可以说：把贝加尔湖畔设为闹铃</string>
    <string name="str_alarm_modify">你可以先删除闹钟，然后再设置闹钟</string>
    <string name="str_alarm_empty">我查了查，你没有闹钟</string>
    <string name="str_alarm_delete">请对我说“删除第*个闹钟”，也可以说“删除全部闹钟”</string>
    <string name="str_del_err">删除失败了</string>
    <string name="str_del_success">好的，已帮你删除%1$s闹钟</string>
    <string name="str_del_all">已帮你删除全部闹钟</string>
    <string name="str_volume_set_err">换个说法调节音量吧，试试说：“音量增大”、“音量减小到5”</string>
    <string name="str_system_set_err">你说的我还不会，尝试换个说法吧</string>
    <string name="str_volume_now">当前音量为</string>
    <string name="str_resolution_error">暂不支持分辨率设置</string>
    <string name="str_volume_unmute">已取消</string>
    <string name="str_volume_mute">已静音</string>
    <string name="str_volume_max">音量已调整到</string>
    <string name="str_install_sohu">这是搜狐的视频源,请选择安装搜狐视频~</string>
    <string name="str_install_mgtv">这是芒果tv的视频源,请选择安装芒果tv~</string>
    <string name="searchfail_tips">搜索失败,重试一次</string>
    <string name="no_content_tips">没有搜索到影片,换个词试试</string>
    <string name="str_install_tencenttv">这是云视听的视频源,请选择安装云视听极光~</string>
    <string name="str_search_nomatch_whepisode">没有找到匹配集,尝试播放第一集</string>
    <string name="str_goto_watch">前往观看</string>

    <!-- 天脉演示应答 -->
    <string name="str_tianmai_start_play">爷爷您该起床了</string>
    <string name="str_tianmai_schedule_6">播放今日的天气预报</string>
    <string name="str_tianmai_tip_wakeup">请您先坐在床头一分钟，喝一杯温开水，然后吃降压药，之后做十指梳头，揉双耳轮廓和嚼牙若干次后再起床。洗漱时请您用热毛巾捂眼一分钟。</string>
    <string name="str_tianmai_schedule_6_half">请您进行晨练一小时。</string>
    <string name="str_tianmai_schedule_8">请您在八点钟之前吃早饭。</string>
    <string name="str_tianmai_schedule_8_half">请你送孙子上学。</string>
    <string name="str_tianmai_schedule_9">请您进行健康检测。</string>
    <string name="str_tianmai_schedule_9_half">请您买菜。</string>
    <string name="str_tianmai_schedule_10">请您开始准备并用午饭。</string>
    <string name="str_tianmai_schedule_12">请您进行散步二十分钟。</string>
    <string name="str_tianmai_schedule_12_half">请您进行午休。</string>
    <string name="str_tianmai_schedule_13">请您起床，注意醒来卧床一分钟，坐在床边一分钟，之后再喝一杯热水。</string>
    <string name="str_tianmai_schedule_13_half">请您收看健康教育专题。</string>
    <string name="str_tianmai_schedule_14">请您进行身体锻炼，并进行(xing2)会客访友。</string>
    <string name="str_tianmai_schedule_16">请您准备晚餐</string>
    <string name="str_tianmai_schedule_16_half">请您接孙子回家</string>
    <string name="str_tianmai_schedule_17_half">您该吃晚餐了</string>
    <string name="str_tianmai_schedule_18">请您吃药</string>
    <string name="str_tianmai_schedule_19">请您收看新闻联播</string>
    <string name="str_tianmai_schedule_20_half">请您在睡前洗个澡或者泡个澡</string>
    <string name="str_tianmai_schedule_21">您该上床睡觉了。</string>
    <string name="str_tianmai_sleep_notice">请您在睡前，拍打左肘弯100下，以防止血管堵塞。有节奏的用双手梳头，嚼牙，捋双耳廓若干次，或进行100次踮脚并拍打涌泉穴。之后请您喝半杯温开水后准备入睡。深夜上厕所的时候，请您不要着急起来，先在床上躺一分钟，然后在床上坐一分钟，最后再起夜。别忘了回床的时候再喝一口温开水。</string>
</resources>
