<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog2_bg">

    <TextView
        android:id="@+id/title_txtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dip_35"
        android:text="@string/tips"
        android:textColor="@color/gray_black"
        android:textSize="@dimen/txt_24" />

    <TextView
        android:id="@+id/content_txtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dip_100"
        android:ellipsize="none"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dip_50"
        android:paddingRight="@dimen/dip_50"
        android:text="@string/network_check"
        android:textColor="@color/gray_black"
        android:textSize="@dimen/txt_21" />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="@dimen/dip_418"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dip_10"
        android:background="@drawable/about_setting_dialog_btn_selector2"
        android:gravity="center"
        android:text="@string/network_button"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_24" />

</RelativeLayout>