<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="442dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="200dp"
    android:layout_marginEnd="200dp"
    android:background="@drawable/message_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_time"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginTop="57dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start|bottom"
            android:textColor="@color/white"
            android:textSize="43sp" />

        <TextView
            android:id="@+id/alarm_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="end|bottom"
            android:paddingBottom="6dp"
            android:textColor="@color/white"
            android:textSize="21sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/alarm_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_time"
        android:layout_marginTop="20dp"
        android:ellipsize="none"
        android:gravity="left"
        android:paddingLeft="58dp"
        android:paddingRight="58dp"
        android:text="@string/str_alarm_note"
        android:textColor="@color/white"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/event_txtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:paddingLeft="58dp"
        android:paddingRight="58dp"
        android:text="@string/tips"
        android:textColor="@color/white"
        android:textSize="23sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alarm_confirm_btn"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/alarm_btn_selector"
            android:focusable="true"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/str_alarm_button"
            android:textColor="@color/text_color_selector"
            android:textSize="24sp" />

        <Button
            android:id="@+id/alarm_later_btn"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:background="@drawable/alarm_btn_selector"
            android:focusable="true"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/str_alarm_later_button"
            android:textColor="@color/text_color_selector"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>